--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -42,6 +42,7 @@
     font-size: 700 1.6rem Archivo;
     cursor: pointer;
     transition: 0.2s;
+    outline: 0;
     
 }
 
@@ -55,7 +56,7 @@
 
 #page-give-classes .input-block+.input-block,
 #page-give-classes .input-block+.textarea-block,
-#page-give-classes .input-block+.select-block {
+#page-give-classes .select-block+.input-block {
     margin-top: 2.4rem;
 }
 
@@ -139,7 +140,5 @@
         margin-top: 0;
         width: 200px;
     }
-
-
 
 }
