--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -1,51 +1,6 @@
 #page-study #container{
     width: 100vw;
     height: 100vh;
-
-}
-
-.page-header {
-    background-color: var(--color-primary);
-    display: flex;
-    flex-direction: column;
-}
-
-.page-header .top-bar-container{
-    width: 90%;
-    margin: 0 auto;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.6rem 0;
-}
-
-.page-header .top-bar-container a {
-    height: 3.2rem;
-    transition: opacity 0.2s;
-    opacity: 0.7;
-
-}
-
-.page-header .top-bar-container a:hover {
-    opacity: 1;
-} 
-
-.page-header .top-bar-container img {
-    height: 1.6rem;
-}
-
-.page-header .header-content {
-    width: 90%;
-    margin: 3.2rem auto;
-
-    position: relative;
-}
-
-.page-header .header-content strong {
-    font: 700 3.6rem Archivo;
-    line-height: 4.2rem;
-    color: var(--color-title-in-primary);
 }
 
 #search-teachers {
@@ -80,57 +35,6 @@
 #search-teachers button:hover {
     background-color: var(--color-secondary-dark);
 }
-.select-block label, 
-.input-block label {
-    font-size: 1.4rem;
-    color: var(--color-text-complement);
-}
-
-.input-block input,
-.select-block select {
-    width: 100%;
-    height: 5.6rem;
-    margin-top: 0.8rem;
-    border-radius: 0.8rem;
-    background: var(--color-input-background);
-    border: 1px solid var(--color-line-in-white);
-    outline: 0;
-    padding: 0 1.6rem;
-    font: 1.6rem Archivo;
-}
-
-.input-block {
-    position: relative;
-}
-
-.input-block:focus-within::after {
-    content: "";
-
-    width: calc(100% - 3.2rem);
-    height: 4px;
-    background:var(--color-secondary);
-
-    position: absolute;
-    left: 1.6rem;
-    bottom: 0px;
-}
-
-.select-block {
-    position: relative;
-}
-
-.select-block:focus-within::after {
-    content: "";
-
-    width: calc(100% - 3.2rem);
-    height: 4px;
-    background:var(--color-secondary);
-
-    position: absolute;
-    left: 1.6rem;
-    right: 1.6rem;
-    bottom: 0px;
-}
 
 #page-study main{
     margin: 3.2rem auto;
@@ -140,13 +44,14 @@
 .teacher-item {
     background-color: var(--color-box-base);
     border: 1px solid var(--color-line-in-white);
-    border-radius: 0.8rem;
+    border-radius: 0.9rem;
     margin-top: 2.4rem;
 
 }
 .teacher-item header {
     padding: 3.2rem 2rem;
     display: flex;
+    align-items: center;
 }
 
 .teacher-item header img{
@@ -233,7 +138,7 @@
         height: 340px;
     }
     .page-header .top-bar-container{
-        max-width: 110px;
+        max-width: 1100px;
     }
 
     .page-header .header-content {
@@ -252,7 +157,7 @@
     .page-header .header-content strong {
         max-width: 350px;
     }
-
+    
     .teacher-item header, 
     .teacher-item footer {
         padding: 32px;
@@ -272,7 +177,7 @@
         margin: 0 auto;       
     }
 
-    #search-teacherrs .select-block {
+    #search-teachers .select-block {
         margin-bottom: 0;
     }
     
