--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -30,7 +30,7 @@
             </div>
        </header>     
        <main>
-            <form action="" id="create-class">
+            <form action="/save-classes" id="create-class" method="POST">
                 <fieldset>
                     <legend>Seus dados</legend>
                     <div class="input-block">
@@ -109,4 +109,3 @@
     
 </body>
 </html>
-
